--- a/miniERPMVC/Views/Fornecedores/Index.cshtml
+++ b/miniERPMVC/Views/Fornecedores/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Fornecedores</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Criar fornecedor</a>
 </p>
 <table class="table">
     <thead>
@@ -37,9 +37,9 @@
                 @Html.DisplayFor(modelItem => item.TelefoneFornecedor)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.IdFornecedor">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.IdFornecedor">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.IdFornecedor">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.IdFornecedor">Editar</a> |
+                <a asp-action="Details" asp-route-id="@item.IdFornecedor">Detalhes</a> |
+                <a asp-action="Delete" asp-route-id="@item.IdFornecedor">Deletar</a>
             </td>
         </tr>
 }
