--- a/miniERPMVC/Views/NotasFiscais/Create.cshtml
+++ b/miniERPMVC/Views/NotasFiscais/Create.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Criar</h1>
 
-<h4>NotasFiscai</h4>
+<h4>Notas Fiscais</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -38,7 +38,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Voltar</a>
 </div>
 
 @section Scripts {
