--- a/miniERPMVC/Views/NotasFiscais/Details.cshtml
+++ b/miniERPMVC/Views/NotasFiscais/Details.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Detalhes</h1>
 
 <div>
-    <h4>NotasFiscai</h4>
+    <h4>Notas Fiscais</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -31,6 +31,7 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.IdNota">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.IdNota">Editar</a> |
+    <a asp-action="Index">Voltar</a>|
+    <a asp-action="" onclick="display()">Imprimir</a>
 </div>
